--- a/src/Altkom.Shopper.Api/appsettings.json
+++ b/src/Altkom.Shopper.Api/appsettings.json
@@ -9,5 +9,13 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=shopper.db"
+  },
+
+  "NbpApi": {
+    "Url": "http://api.nbp.pl",
+    "CurrencyCode": "CHF",
+    "CurrencyTable": "A"
   }
+
+
 }
