Dodanie konfiguracji xml

--- a/src/Altkom.Shopper.Api/Properties/launchSettings.json
+++ b/src/Altkom.Shopper.Api/Properties/launchSettings.json
@@ -8,13 +8,22 @@
     }
   },
   "profiles": {
-    "Altkom.Shopper.Api": {
+    "Altkom.Shopper.Api (Development)": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7201;http://localhost:5193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Altkom.Shopper.Api (Production)": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7201;http://localhost:5193",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
