--- a/src/Altkom.Shopper.Api/Altkom.Shopper.Api.csproj
+++ b/src/Altkom.Shopper.Api/Altkom.Shopper.Api.csproj
@@ -20,7 +20,17 @@
     </Content>
   </ItemGroup>
 
-  <ItemGroup>
+	<!-- Publish Settings -->
+	<ItemGroup>
+		<Content Update="appsettings.*.json">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+		</Content>		
+		<Content Update="appsettings.$(ASPNETCORE_ENVIRONMENT).json">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>		
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.13">
       <PrivateAssets>all</PrivateAssets>
