--- a/src/Altkom.Shopper.Infrastructure/Altkom.Shopper.Infrastructure.csproj
+++ b/src/Altkom.Shopper.Infrastructure/Altkom.Shopper.Infrastructure.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.13">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.13" />
   </ItemGroup>
 
   <ItemGroup>
