--- a/src/Altkom.Shopper.Api/Altkom.Shopper.Api.csproj
+++ b/src/Altkom.Shopper.Api/Altkom.Shopper.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -24,10 +24,16 @@
 	<ItemGroup>
 		<Content Update="appsettings.*.json">
 			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
-		</Content>		
+		</Content>
+		<Content Update="appsettings.*.xml">
+			<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+		</Content>
 		<Content Update="appsettings.$(ASPNETCORE_ENVIRONMENT).json">
 			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
-		</Content>		
+		</Content>
+		<Content Update="appsettings.$(ASPNETCORE_ENVIRONMENT).xml">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
