--- a/src/Altkom.Shopper.Api/appsettings.json
+++ b/src/Altkom.Shopper.Api/appsettings.json
@@ -1,5 +1,10 @@
 {
   "Logging": {
+
+    "Console": {
+      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
+    },
+
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
