--- a/src/Altkom.Shopper.Api/appsettings.json
+++ b/src/Altkom.Shopper.Api/appsettings.json
@@ -20,6 +20,10 @@
     "Url": "http://api.nbp.pl",
     "CurrencyCode": "CHF",
     "CurrencyTable": "A"
+  },
+
+  "ApiKeySettings": {
+    "ApiKey": "123"
   }
 
 
